Remove implementation dependency on lwjgl natives